--- a/index.html
+++ b/index.html
@@ -1,144 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FA-Tshirt</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap');
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FA-Tshirt</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: Arial, sans-serif;
+        }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: Arial, sans-serif;
-    }
+        body {
+            background-image: url('https://images.unsplash.com/photo-1602810313328-66c7db71f470'); /* Colorful fashion wallpaper */
+            background-size: cover;
+            background-attachment: fixed;
+            background-position: center;
+            color: white;
+        }
 
-    body {
-      background: url('https://images.unsplash.com/photo-1603252110482-3ba31c0b602b?auto=format&fit=crop&w=1740&q=80') no-repeat center center fixed;
-      background-size: cover;
-      color: white;
-    }
+        header {
+            background-color: rgba(0, 0, 0, 0.6);
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 10px 20px;
+        }
 
-    header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 20px;
-      background-color: rgba(0, 0, 0, 0.6);
-    }
+        .logo {
+            font-size: 32px;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px #ff0055;
+            font-family: 'Impact', fantasy;
+        }
 
-    .logo {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 32px;
-      font-weight: bold;
-      color: red;
-      text-shadow: 2px 2px 4px #000;
-    }
+        .search-bar {
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
 
-    .search-bar {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 20px;
-    }
+        .search-bar input {
+            width: 50%;
+            padding: 8px 12px;
+            font-size: 16px;
+            border-radius: 4px;
+            border: 2px solid white;
+        }
 
-    .search-bar input {
-      padding: 8px 15px;
-      font-size: 16px;
-      width: 400px;
-      border-radius: 5px;
-      border: none;
-    }
+        .categories {
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            margin: 20px 0;
+        }
 
-    .categories {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 15px;
-    }
+        .category {
+            cursor: pointer;
+            font-size: 20px;
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 10px 20px;
+            border-radius: 8px;
+            transition: 0.3s;
+        }
 
-    .category {
-      cursor: pointer;
-      background-color: rgba(255, 255, 255, 0.15);
-      padding: 10px 20px;
-      border-radius: 8px;
-      backdrop-filter: blur(5px);
-    }
+        .category:hover {
+            background-color: rgba(255, 255, 255, 0.4);
+        }
 
-    .popup {
-      display: none;
-      position: absolute;
-      top: 100px;
-      left: 50%;
-      transform: translateX(-50%);
-      background-color: rgba(0, 0, 0, 0.7);
-      padding: 30px;
-      width: 50%;
-      border-radius: 15px;
-      backdrop-filter: blur(10px);
-    }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 20%;
+            left: 50%;
+            transform: translate(-50%, -20%);
+            width: 60%;
+            background-color: rgba(0, 0, 0, 0.8);
+            padding: 30px;
+            border-radius: 10px;
+            z-index: 1000;
+        }
 
-    .category:hover + .popup,
-    .popup:hover {
-      display: block;
-    }
+        .popup-content {
+            font-size: 18px;
+        }
 
-    footer {
-      margin-top: 100px;
-      padding: 40px;
-      background-color: rgba(0, 0, 0, 0.6);
-      text-align: center;
-      font-size: 14px;
-    }
+        .products {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            padding: 30px;
+            background-color: rgba(0, 0, 0, 0.5);
+        }
 
-    .footer-about {
-      max-width: 900px;
-      margin: auto;
-      line-height: 1.7;
-      font-size: 15px;
-      color: #ddd;
-    }
-  </style>
+        .product {
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 15px;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .product img {
+            width: 100%;
+            border-radius: 10px;
+        }
+
+        footer {
+            padding: 30px;
+            background-color: rgba(0, 0, 0, 0.7);
+            text-align: center;
+            font-size: 14px;
+        }
+    </style>
+    <script>
+        function showPopup(category) {
+            const popup = document.getElementById("popup");
+            popup.style.display = "block";
+            popup.querySelector(".popup-content").innerText = `You clicked on ${category} category.`;
+        }
+        function hidePopup() {
+            document.getElementById("popup").style.display = "none";
+        }
+    </script>
 </head>
 <body>
-  <header>
-    <div class="logo">FA-Tshirt</div>
-    <div>
-      <button>Login</button>
-      <button>Cart</button>
-    </div>
-  </header>
+    <header>
+        <div class="logo">FA-Tshirt</div>
+        <div>
+            <button onclick="alert('Login popup')">Login</button>
+            <button onclick="alert('Cart popup')">Cart</button>
+        </div>
+    </header>
 
-  <div class="search-bar">
-    <input type="text" placeholder="Search for products..." />
+    <div class="search-bar">
+        <input type="text" placeholder="Search for T-Shirts...">
+    </div>
+
     <div class="categories">
-      <div class="category">Men</div>
-      <div class="category">Women</div>
-      <div class="category">Kids</div>
+        <div class="category" onclick="showPopup('Men')">Men</div>
+        <div class="category" onclick="showPopup('Women')">Women</div>
+        <div class="category" onclick="showPopup('Kids')">Kids</div>
     </div>
-  </div>
 
-  <div class="popup">Men's Collection: Trendy, Comfortable & Budget-Friendly.</div>
-  <div class="popup">Women's Collection: Bold, Stylish & Everyday Wear.</div>
-  <div class="popup">Kid's Collection: Fun, Colorful & Durable for All Ages.</div>
-
-  <footer>
-    <div class="footer-about">
-      <p><strong>About FA-Tshirt:</strong></p>
-      <p>
-        FA-Tshirt is more than just a clothing brand — it's a dream turned into a mission.
-        Humne shuruat ek choti si soch se ki thi, ek aisi soch jisme har kisi ke liye stylish, quality, aur budget-friendly kapde available ho sakein.
-        Main khud e-commerce field me kaam karta hoon, MIS aur inventory ka solid experience hai, aur saath hi trading ka bhi deep interest hai.
-        Apna khud ka kuch karne ka junoon mujhe yahan tak le aaya.
-        
-        Design banaye humne khud, Bewakoof jaisi websites se behtar quality ka sapna lekar. Budget kam tha lekin himmat badi thi.
-        FA-Tshirt ka maksad hai ek aise brand ko banana jo har aam aadmi afford kar sake, bina quality ka compromise kiye.
-        Apna brand India ka No.1 quality brand banana hai — jisme har product me passion dikhe.
-        
-        Yeh sirf ek brand nahi, ek revolution hai, jisme aap sabka support chahiye.
-      </p>
+    <div id="popup" class="popup" onclick="hidePopup()">
+        <div class="popup-content">Category details will appear here</div>
     </div>
-  </footer>
+
+    <div class="products">
+        <div class="product"><img src="https://images.unsplash.com/photo-1520975867591-dc65d8d1d44b" alt="Tshirt"><p>Cool Streetwear Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1520975922553-54b2200b3c80" alt="Tshirt"><p>Graphic Bold Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1542062703-6b6b7f6d2c8f" alt="Tshirt"><p>Modern Fit Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246" alt="Tshirt"><p>Urban Style Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1600185366139-f0f4f1fa48cc" alt="Tshirt"><p>Color Pop Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1528460033278-a6ba57020470" alt="Tshirt"><p>Bright Casual Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1618354691251-bc450adfb59c" alt="Tshirt"><p>Classic Cotton Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1616765226506-cc0a1306d2c4" alt="Tshirt"><p>Funky Style Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1593032465174-9bff0d2cb774" alt="Tshirt"><p>Neon Glow Tee</p></div>
+        <div class="product"><img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f" alt="Tshirt"><p>Oversized Graphic Tee</p></div>
+    </div>
+
+    <footer>
+        <p>
+            FA-Tshirt is not just a brand, it's a journey. Launched from the heart of New Ashok Nagar, this startup is driven by a passion for fashion, creativity, and entrepreneurship.<br><br>
+            With a fire to build India’s #1 budget-friendly quality clothing brand, we offer styles for everyone. Whether you're from a small town or a metro city, FA-Tshirt believes fashion should never be out of reach.<br><br>
+            From a single laptop and a ₹50,000 investment, we've grown step by step – handling e-commerce operations, designing, and dreaming big. We’ve hustled from Flipkart listings to learning trading, MIS reporting, and mastering Excel just to keep pushing forward.<br><br>
+            Our vision? To make FA-Tshirt a household name across India. From trading charts to t-shirt prints – every move we make is toward freedom, success, and style.
+        </p>
+    </footer>
 </body>
 </html>
