--- a/index.html
+++ b/index.html
@@ -1,173 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FA-Tshirt</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
-
-        body {
-            background-image: url('https://images.unsplash.com/photo-1602810313328-66c7db71f470'); /* Colorful fashion wallpaper */
-            background-size: cover;
-            background-attachment: fixed;
-            background-position: center;
-            color: white;
-        }
-
-        header {
-            background-color: rgba(0, 0, 0, 0.6);
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 20px;
-        }
-
-        .logo {
-            font-size: 32px;
-            font-weight: bold;
-            text-shadow: 2px 2px 5px #ff0055;
-            font-family: 'Impact', fantasy;
-        }
-
-        .search-bar {
-            display: flex;
-            justify-content: center;
-            padding: 10px 0;
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-
-        .search-bar input {
-            width: 50%;
-            padding: 8px 12px;
-            font-size: 16px;
-            border-radius: 4px;
-            border: 2px solid white;
-        }
-
-        .categories {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            margin: 20px 0;
-        }
-
-        .category {
-            cursor: pointer;
-            font-size: 20px;
-            background-color: rgba(255, 255, 255, 0.2);
-            padding: 10px 20px;
-            border-radius: 8px;
-            transition: 0.3s;
-        }
-
-        .category:hover {
-            background-color: rgba(255, 255, 255, 0.4);
-        }
-
-        .popup {
-            display: none;
-            position: fixed;
-            top: 20%;
-            left: 50%;
-            transform: translate(-50%, -20%);
-            width: 60%;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 30px;
-            border-radius: 10px;
-            z-index: 1000;
-        }
-
-        .popup-content {
-            font-size: 18px;
-        }
-
-        .products {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            padding: 30px;
-            background-color: rgba(0, 0, 0, 0.5);
-        }
-
-        .product {
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 15px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .product img {
-            width: 100%;
-            border-radius: 10px;
-        }
-
-        footer {
-            padding: 30px;
-            background-color: rgba(0, 0, 0, 0.7);
-            text-align: center;
-            font-size: 14px;
-        }
-    </style>
-    <script>
-        function showPopup(category) {
-            const popup = document.getElementById("popup");
-            popup.style.display = "block";
-            popup.querySelector(".popup-content").innerText = `You clicked on ${category} category.`;
-        }
-        function hidePopup() {
-            document.getElementById("popup").style.display = "none";
-        }
-    </script>
+  <meta charset="UTF-8">
+  <title>FA-Tshirt</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+    body {
+      background-image: url('https://wallpapercave.com/wp/wp7480239.jpg');
+      background-size: cover;
+      background-attachment: fixed;
+      background-position: center;
+      color: white;
+    }
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 10px 30px;
+    }
+    .logo {
+      font-size: 32px;
+      font-weight: bold;
+      font-family: 'Impact', fantasy;
+      text-shadow: 3px 3px 5px #ff0000;
+    }
+    .search-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 15px;
+    }
+    .search-bar {
+      width: 50%;
+      padding: 10px;
+      border-radius: 20px;
+      border: 2px solid white;
+      font-size: 16px;
+    }
+    .categories {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+    }
+    .category {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 8px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .category:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .popup {
+      display: none;
+      position: absolute;
+      top: 120px;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 60%;
+      padding: 20px;
+      background: rgba(0, 0, 0, 0.8);
+      border-radius: 10px;
+      text-align: center;
+    }
+    .category:hover + .popup,
+    .popup:hover {
+      display: block;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 20px;
+      padding: 40px;
+    }
+    .product {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 10px;
+      border-radius: 15px;
+      text-align: center;
+      transition: 0.3s;
+    }
+    .product:hover {
+      background: rgba(255, 255, 255, 0.3);
+    }
+    .product img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+    footer {
+      background: rgba(0, 0, 0, 0.85);
+      padding: 30px;
+      font-size: 14px;
+      line-height: 1.8;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <div class="logo">FA-Tshirt</div>
-        <div>
-            <button onclick="alert('Login popup')">Login</button>
-            <button onclick="alert('Cart popup')">Cart</button>
-        </div>
-    </header>
 
-    <div class="search-bar">
-        <input type="text" placeholder="Search for T-Shirts...">
-    </div>
+  <header>
+    <div class="logo">FA-Tshirt</div>
+    <div style="color: #fff;">Login | Cart</div>
+  </header>
+
+  <div class="search-container">
+    <input type="text" placeholder="Search for t-shirts..." class="search-bar">
 
     <div class="categories">
-        <div class="category" onclick="showPopup('Men')">Men</div>
-        <div class="category" onclick="showPopup('Women')">Women</div>
-        <div class="category" onclick="showPopup('Kids')">Kids</div>
-    </div>
+      <div class="category">Men</div>
+      <div class="popup">Explore trending styles for Men: Oversized, Streetwear, Graphic Tees, and more!</div>
 
-    <div id="popup" class="popup" onclick="hidePopup()">
-        <div class="popup-content">Category details will appear here</div>
-    </div>
+      <div class="category">Women</div>
+      <div class="popup">Explore trending styles for Women: Cropped, Boyfriend Tees, Tie-Dye, and more!</div>
 
-    <div class="products">
-        <div class="product"><img src="https://images.unsplash.com/photo-1520975867591-dc65d8d1d44b" alt="Tshirt"><p>Cool Streetwear Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1520975922553-54b2200b3c80" alt="Tshirt"><p>Graphic Bold Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1542062703-6b6b7f6d2c8f" alt="Tshirt"><p>Modern Fit Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1541099649105-f69ad21f3246" alt="Tshirt"><p>Urban Style Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1600185366139-f0f4f1fa48cc" alt="Tshirt"><p>Color Pop Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1528460033278-a6ba57020470" alt="Tshirt"><p>Bright Casual Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1618354691251-bc450adfb59c" alt="Tshirt"><p>Classic Cotton Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1616765226506-cc0a1306d2c4" alt="Tshirt"><p>Funky Style Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1593032465174-9bff0d2cb774" alt="Tshirt"><p>Neon Glow Tee</p></div>
-        <div class="product"><img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f" alt="Tshirt"><p>Oversized Graphic Tee</p></div>
+      <div class="category">Kids</div>
+      <div class="popup">Explore cool and comfy styles for Kids: Cartoon Prints, Color Pops, and more!</div>
     </div>
+  </div>
 
-    <footer>
-        <p>
-            FA-Tshirt is not just a brand, it's a journey. Launched from the heart of New Ashok Nagar, this startup is driven by a passion for fashion, creativity, and entrepreneurship.<br><br>
-            With a fire to build India’s #1 budget-friendly quality clothing brand, we offer styles for everyone. Whether you're from a small town or a metro city, FA-Tshirt believes fashion should never be out of reach.<br><br>
-            From a single laptop and a ₹50,000 investment, we've grown step by step – handling e-commerce operations, designing, and dreaming big. We’ve hustled from Flipkart listings to learning trading, MIS reporting, and mastering Excel just to keep pushing forward.<br><br>
-            Our vision? To make FA-Tshirt a household name across India. From trading charts to t-shirt prints – every move we make is toward freedom, success, and style.
-        </p>
-    </footer>
+  <div class="products">
+    <div class="product"><img src="https://i.imgur.com/Z7AzH2c.jpg" alt="Tshirt1"><p>Urban Street Tee</p></div>
+    <div class="product"><img src="https://i.imgur.com/k1olx0B.jpg" alt="Tshirt2"><p>Retro Vibe</p></div>
+    <div class="product"><img src="https://i.imgur.com/w7V8L1j.jpg" alt="Tshirt3"><p>Minimalist Fit</p></div>
+    <div class="product"><img src="https://i.imgur.com/vzHiO3v.jpg" alt="Tshirt4"><p>Printed Blast</p></div>
+    <div class="product"><img src="https://i.imgur.com/nTGMgfd.jpg" alt="Tshirt5"><p>Oversized Chill</p></div>
+    <div class="product"><img src="https://i.imgur.com/rK1G8TP.jpg" alt="Tshirt6"><p>Bold Black</p></div>
+    <div class="product"><img src="https://i.imgur.com/n9r9V7f.jpg" alt="Tshirt7"><p>Neon Glow</p></div>
+    <div class="product"><img src="https://i.imgur.com/kZ9ZTgG.jpg" alt="Tshirt8"><p>Vibrant Vibes</p></div>
+    <div class="product"><img src="https://i.imgur.com/D1hvGEZ.jpg" alt="Tshirt9"><p>Sporty Edge</p></div>
+    <div class="product"><img src="https://i.imgur.com/NnKgfIm.jpg" alt="Tshirt10"><p>Comfy Cotton</p></div>
+  </div>
+
+  <footer>
+    <h3>About FA-Tshirt</h3>
+    <p>
+      FA-Tshirt is not just a fashion brand, it’s a movement started by a dreamer who began his journey from scratch. From working in MIS to managing inventory and listing across Flipkart, Amazon, Meesho, and more – our founder hustled through every step. With a passion for stylish clothing and a sharp eye for trading and business, FA-Tshirt was born to bring high-quality, budget-friendly fashion to everyone. We believe in affordable fashion with premium quality, building India’s No.1 clothing brand for the youth.
+      <br><br>
+      With experience in Excel automation, trading analysis, and startup spirit, FA-Tshirt is growing to offer not just clothes, but confidence.
+      <br><br>
+      Dream: To make FA-Tshirt a globally loved brand starting from the streets of India.
+    </p>
+  </footer>
+
 </body>
 </html>
