--- a/index.html
+++ b/index.html
@@ -1,156 +1,312 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FA-Tshirt</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    @font-face {
+      font-family: 'Snap ITC';
+      src: local('Snap ITC');
+    }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: Arial, sans-serif;
     }
+
     body {
-      background-image: url('https://wallpapercave.com/wp/wp7480239.jpg');
+      font-family: 'Bahnschrift', sans-serif;
+      background: url('https://wallpapercave.com/wp/Anime.jpg') no-repeat center center fixed;
       background-size: cover;
-      background-attachment: fixed;
-      background-position: center;
-      color: white;
+      color: #fff;
     }
+
     header {
+      background-color: rgba(0, 0, 0, 0.8);
+      padding: 15px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: rgba(0, 0, 0, 0.7);
-      padding: 10px 30px;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      animation: fadeDown 1s ease;
     }
+
+    @keyframes fadeDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     .logo {
       font-size: 32px;
-      font-weight: bold;
-      font-family: 'Impact', fantasy;
-      text-shadow: 3px 3px 5px #ff0000;
+      font-family: 'Snap ITC';
+      font-weight: 700;
+      color: #e63946;
+      text-shadow: 2px 2px 0 #000;
     }
-    .search-container {
+
+    .nav-right {
       display: flex;
-      flex-direction: column;
       align-items: center;
-      padding: 15px;
-    }
-    .search-bar {
-      width: 50%;
-      padding: 10px;
-      border-radius: 20px;
-      border: 2px solid white;
-      font-size: 16px;
-    }
-    .categories {
-      display: flex;
-      justify-content: center;
       gap: 20px;
-      margin-top: 10px;
     }
-    .category {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 8px 20px;
-      border-radius: 20px;
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      margin: 0 10px;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    .nav-links a:hover {
+      color: #ff6b6b;
+    }
+
+    .search-filter {
+      text-align: center;
+      margin: 20px auto 5px;
+    }
+
+    .search-filter input[type="text"] {
+      padding: 8px;
+      width: 300px;
+      border-radius: 5px;
+      border: none;
+    }
+
+    .category-bar {
+      text-align: center;
+      margin: 10px 0;
+    }
+
+    .category-bar span {
+      color: black;
+      background: white;
+      padding: 5px 15px;
+      margin: 0 5px;
+      border-radius: 5px;
       cursor: pointer;
       font-weight: bold;
-      transition: 0.3s;
     }
-    .category:hover {
-      background: rgba(255, 255, 255, 0.3);
-    }
-    .popup {
-      display: none;
-      position: absolute;
-      top: 120px;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 60%;
-      padding: 20px;
-      background: rgba(0, 0, 0, 0.8);
-      border-radius: 10px;
+
+    .hero {
       text-align: center;
+      padding: 80px 20px 40px;
+      background: rgba(0,0,0,0.5);
+      animation: fadeUp 1s ease;
     }
-    .category:hover + .popup,
-    .popup:hover {
-      display: block;
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
+
+    .hero h1 {
+      font-size: 48px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 20px;
+    }
+
     .products {
       display: grid;
-      grid-template-columns: repeat(5, 1fr);
-      gap: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
       padding: 40px;
+      background: rgba(0,0,0,0.7);
     }
+
     .product {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 10px;
-      border-radius: 15px;
-      text-align: center;
-      transition: 0.3s;
+      background: #fff;
+      color: #000;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
+
     .product:hover {
-      background: rgba(255, 255, 255, 0.3);
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #000;
     }
+
     .product img {
       width: 100%;
-      height: 200px;
+      height: 250px;
       object-fit: cover;
-      border-radius: 10px;
     }
+
+    .product-info {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .product-info h3 {
+      margin-bottom: 10px;
+    }
+
+    .buy-btn {
+      background-color: #e63946;
+      border: none;
+      color: white;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background 0.3s;
+    }
+
+    .buy-btn:hover {
+      background-color: #d90429;
+    }
+
     footer {
-      background: rgba(0, 0, 0, 0.85);
-      padding: 30px;
-      font-size: 14px;
-      line-height: 1.8;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 20px;
+      text-align: center;
+      color: white;
+    }
+
+    #about-content {
+      padding: 20px;
+      display: none;
+      background: rgba(255, 255, 255, 0.9);
+      color: black;
+    }
+
+    #loginPopup {
+      display: none;
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: white;
+      color: black;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #000;
+    }
+
+    #loginPopup input {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 10px;
+    }
+
+    #loginPopup button {
+      background: #e63946;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-
   <header>
     <div class="logo">FA-Tshirt</div>
-    <div style="color: #fff;">Login | Cart</div>
+    <div class="nav-right">
+      <nav class="nav-links">
+        <a href="#home">Home</a>
+        <a href="#products">Products</a>
+        <a href="#about" onclick="showAbout()">About</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <a href="#" onclick="showLogin()" style="color:white">Login</a>
+      <a href="#" style="color:white">Cart</a>
+    </div>
   </header>
 
-  <div class="search-container">
-    <input type="text" placeholder="Search for t-shirts..." class="search-bar">
+  <div class="search-filter">
+    <input type="text" placeholder="Search for t-shirts...">
+  </div>
 
-    <div class="categories">
-      <div class="category">Men</div>
-      <div class="popup">Explore trending styles for Men: Oversized, Streetwear, Graphic Tees, and more!</div>
+  <div class="category-bar">
+    <span>Men</span>
+    <span>Women</span>
+    <span>Kids</span>
+  </div>
 
-      <div class="category">Women</div>
-      <div class="popup">Explore trending styles for Women: Cropped, Boyfriend Tees, Tie-Dye, and more!</div>
+  <section class="hero" id="home">
+    <h1>Welcome to FA-Tshirt</h1>
+    <p>Trendy | Comfortable | Affordable</p>
+  </section>
 
-      <div class="category">Kids</div>
-      <div class="popup">Explore cool and comfy styles for Kids: Cartoon Prints, Color Pops, and more!</div>
+  <section id="about-content">
+    <h2>Our Story</h2>
+    <p>FA-Tshirt is not just a brand, it's a dream. It started with a passion to create high-quality, stylish, and affordable fashion that represents youth and ambition. Our journey began with a single vision — to bring creativity, comfort, and confidence into every thread we stitch. Thank you for being a part of this journey.</p>
+  </section>
+
+  <section class="products" id="products">
+    <!-- Repeat product blocks to ensure scrolling -->
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1618354691549-6d8b1b464986?auto=format&fit=crop&w=400&q=80" alt="Tshirt 1">
+      <div class="product-info">
+        <h3>Black Round Neck</h3>
+        <p>₹299</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
     </div>
-  </div>
-
-  <div class="products">
-    <div class="product"><img src="https://i.imgur.com/Z7AzH2c.jpg" alt="Tshirt1"><p>Urban Street Tee</p></div>
-    <div class="product"><img src="https://i.imgur.com/k1olx0B.jpg" alt="Tshirt2"><p>Retro Vibe</p></div>
-    <div class="product"><img src="https://i.imgur.com/w7V8L1j.jpg" alt="Tshirt3"><p>Minimalist Fit</p></div>
-    <div class="product"><img src="https://i.imgur.com/vzHiO3v.jpg" alt="Tshirt4"><p>Printed Blast</p></div>
-    <div class="product"><img src="https://i.imgur.com/nTGMgfd.jpg" alt="Tshirt5"><p>Oversized Chill</p></div>
-    <div class="product"><img src="https://i.imgur.com/rK1G8TP.jpg" alt="Tshirt6"><p>Bold Black</p></div>
-    <div class="product"><img src="https://i.imgur.com/n9r9V7f.jpg" alt="Tshirt7"><p>Neon Glow</p></div>
-    <div class="product"><img src="https://i.imgur.com/kZ9ZTgG.jpg" alt="Tshirt8"><p>Vibrant Vibes</p></div>
-    <div class="product"><img src="https://i.imgur.com/D1hvGEZ.jpg" alt="Tshirt9"><p>Sporty Edge</p></div>
-    <div class="product"><img src="https://i.imgur.com/NnKgfIm.jpg" alt="Tshirt10"><p>Comfy Cotton</p></div>
-  </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1598032894623-e81c3e5d7cda?auto=format&fit=crop&w=400&q=80" alt="Tshirt 2">
+      <div class="product-info">
+        <h3>White Graphic Tee</h3>
+        <p>₹349</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?auto=format&fit=crop&w=400&q=80" alt="Tshirt 3">
+      <div class="product-info">
+        <h3>Red Street Style</h3>
+        <p>₹399</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+    <!-- More product blocks -->
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1536148935331-408321065b18?auto=format&fit=crop&w=400&q=80" alt="Tshirt 4">
+      <div class="product-info">
+        <h3>Classic Blue Tee</h3>
+        <p>₹289</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+    <div class="product">
+      <img src="https://images.unsplash.com/photo-1542062703-5a5d2aa0f71b?auto=format&fit=crop&w=400&q=80" alt="Tshirt 5">
+      <div class="product-info">
+        <h3>Urban White</h3>
+        <p>₹320</p>
+        <button class="buy-btn">Add to Cart</button>
+      </div>
+    </div>
+  </section>
 
   <footer>
-    <h3>About FA-Tshirt</h3>
-    <p>
-      FA-Tshirt is not just a fashion brand, it’s a movement started by a dreamer who began his journey from scratch. From working in MIS to managing inventory and listing across Flipkart, Amazon, Meesho, and more – our founder hustled through every step. With a passion for stylish clothing and a sharp eye for trading and business, FA-Tshirt was born to bring high-quality, budget-friendly fashion to everyone. We believe in affordable fashion with premium quality, building India’s No.1 clothing brand for the youth.
-      <br><br>
-      With experience in Excel automation, trading analysis, and startup spirit, FA-Tshirt is growing to offer not just clothes, but confidence.
-      <br><br>
-      Dream: To make FA-Tshirt a globally loved brand starting from the streets of India.
-    </p>
+    &copy; 2025 FA-Tshirt. All rights reserved.
   </footer>
 
+  <div id="loginPopup">
+    <h2>Login</h2>
+    <input type="text" placeholder="Username">
+    <input type="password" placeholder="Password">
+    <button onclick="alert('Login Successful')">Login</button>
+  </div>
+
+  <script>
+    function showAbout() {
+      document.getElementById('about-content').style.display = 'block';
+      window.scrollTo(0, document.getElementById('about-content').offsetTop);
+    }
+    function showLogin() {
+      document.getElementById('loginPopup').style.display = 'block';
+    }
+  </script>
 </body>
 </html>
