--- a/index.html
+++ b/index.html
@@ -276,6 +276,125 @@
     function showLogin() {
       document.getElementById('loginPopup').style.display = 'block';
     }
-  </script>
+  </script><script>
+// ===============================
+// LOGIN SYSTEM USING LOCALSTORAGE
+// ===============================
+
+document.addEventListener("DOMContentLoaded", function () {
+    const loginBtn = document.getElementById("loginBtn");
+    const loginPopup = document.getElementById("loginPopup");
+    const closePopup = document.getElementById("closePopup");
+    const loginForm = document.getElementById("loginForm");
+    const userDisplay = document.getElementById("userDisplay");
+
+    // Check if user already logged in
+    const user = localStorage.getItem("user");
+    if (user) {
+        loginBtn.style.display = "none";
+        userDisplay.innerHTML = `Welcome, <strong>${user}</strong> <button id="logoutBtn">Logout</button>`;
+        addLogoutListener();
+    }
+
+    // Show login popup
+    loginBtn.addEventListener("click", function () {
+        loginPopup.style.display = "block";
+    });
+
+    // Close popup
+    closePopup.addEventListener("click", function () {
+        loginPopup.style.display = "none";
+    });
+
+    // Handle login
+    loginForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const username = document.getElementById("username").value.trim();
+        const password = document.getElementById("password").value.trim();
+
+        if (username && password) {
+            localStorage.setItem("user", username);
+            loginPopup.style.display = "none";
+            loginBtn.style.display = "none";
+            userDisplay.innerHTML = `Welcome, <strong>${username}</strong> <button id="logoutBtn">Logout</button>`;
+            addLogoutListener();
+        } else {
+            alert("Please enter both username and password.");
+        }
+    });
+
+    function addLogoutListener() {
+        const logoutBtn = document.getElementById("logoutBtn");
+        if (logoutBtn) {
+            logoutBtn.addEventListener("click", function () {
+                localStorage.removeItem("user");
+                location.reload();
+            });
+        }
+    }
+});
+</script><script>
+// ===============================
+// LOGIN SYSTEM USING LOCALSTORAGE
+// ===============================
+
+document.addEventListener("DOMContentLoaded", function () {
+    const loginBtn = document.getElementById("loginBtn");
+    const loginPopup = document.getElementById("loginPopup");
+    const closePopup = document.getElementById("closePopup");
+    const loginForm = document.getElementById("loginForm");
+    const userDisplay = document.getElementById("userDisplay");
+    <button id="loginBtn">Login</button>
+<span id="userDisplay" style="margin-left: 10px;"></span>
+
+
+    // Check if user already logged in
+    const user = localStorage.getItem("user");
+    if (user) {
+        loginBtn.style.display = "none";
+        userDisplay.innerHTML = `Welcome, <strong>${user}</strong> <button id="logoutBtn">Logout</button>`;
+        addLogoutListener();
+    }
+
+    // Show login popup
+    loginBtn.addEventListener("click", function () {
+        loginPopup.style.display = "block";
+    });
+
+    // Close popup
+    closePopup.addEventListener("click", function () {
+        loginPopup.style.display = "none";
+    });
+
+    // Handle login
+    loginForm.addEventListener("submit", function (e) {
+        e.preventDefault();
+        const username = document.getElementById("username").value.trim();
+        const password = document.getElementById("password").value.trim();
+
+        if (username && password) {
+            localStorage.setItem("user", username);
+            loginPopup.style.display = "none";
+            loginBtn.style.display = "none";
+            userDisplay.innerHTML = `Welcome, <strong>${username}</strong> <button id="logoutBtn">Logout</button>`;
+            addLogoutListener();
+        } else {
+            alert("Please enter both username and password.");
+        }
+    });
+
+    function addLogoutListener() {
+        const logoutBtn = document.getElementById("logoutBtn");
+        if (logoutBtn) {
+            logoutBtn.addEventListener("click", function () {
+                localStorage.removeItem("user");
+                location.reload();
+            });
+        }
+    }
+});
+</script>
+
+
 </body>
 </html>
